# mouseworld

./: README.md  benchmark.py  entity_render.py  mouseworld.py  pyproject.toml  renderer.py
src/mouseworld/: __init__.py
