[project]
name = "mouseworld"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Zen", email = "ztang230@gmail.com" }
]
dependencies = [
    "numpy>=2.1.0",
    "pygame>=2.6.0",
    "pygame-gui>=0.6.12",
    "psutil>=6.0.0",
    "tqdm>=4.66.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mouseworld"]
